--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       padding: 0;
       height: 100%;
       font-family: sans-serif;
-      overflow: hidden;
     }
 
     .container {
@@ -18,6 +17,7 @@
       height: 100vh;
       width: 100vw;
     }
+
 
     .left {
       flex: 1;
@@ -45,6 +45,30 @@
       font-weight: 300;
 
     }
+
+
+    @media (max-width: 768px) {
+      .container {
+      flex-direction: column;
+      height: auto;
+      overflow-y: auto;
+      }
+
+      .leftTitle{
+        text-align:center;
+        font-size: 9vw;
+        padding:1rem;
+        padding-top: 48px;;
+
+      }
+
+      .leftSubtitle{
+                text-align:center;
+
+        font-size:4vw;
+        padding:1rem;
+      }
+    } 
 
     .right {
       flex: 1;
